[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.78" }
# miniscript = {version = "6.0.1", features=["compiler"]}
miniscript = {git = "https://github.com/rust-bitcoin/rust-miniscript.git", branch = "master", features=["compiler"]}
bip39 = "1.0.1"
